--- a/failure_path_investigation.ipynb
+++ b/failure_path_investigation.ipynb
@@ -42,6 +42,7 @@
     "from matplotlib.animation import FuncAnimation, PillowWriter\n",
     "from edward_tools import visualization\n",
     "from IPython.display import HTML, Image\n",
+    "\n",
     "from test_NAND_platform_helper_function import *\n",
     "\n",
     "coupled_fq_protocol_library = importlib.reload(coupled_fq_protocol_library)\n",
@@ -62,7 +63,9 @@
    "id": "1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from IPython import display"
+   ]
   },
   {
    "cell_type": "code",
@@ -70,7 +73,9 @@
    "id": "2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "display.Image"
+   ]
   },
   {
    "cell_type": "code",
@@ -95,15 +100,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_idenitfication = f\"Experiment 2 (2025-07-01)\"\n",
-    "experiment_idenitfication = f\"Experiment 1 (2025-07-15)\"\n",
+    "name = f\"Experiment 2 (2025-07-01)\"\n",
+    "name = f\"Experiment 1 (2025-07-15)\"\n",
     "\n",
-    "experiment_idenitfication = f\"Experiment 2 (2025-09-02)\"\n",
-    "experiment_idenitfication = f\"Experiment 2 (1990-09-09)\"\n",
-    "experiment_idenitfication = f\"Experiment 1 (2025-09-11)\"\n",
+    "name = f\"Experiment 2 (2025-09-02)\"\n",
+    "name = f\"Experiment 2 (1990-09-09)\"\n",
+    "name = f\"Experiment 1 (2025-09-11)\"\n",
+    "name = f\"Experiment 1 (2025-09-12)\"\n",
+    "name = f\"Experiment 9 (2025-09-05)\"\n",
+    "name = \"Experiment 1 (2025-09-15)\"\n",
+    "\n",
     "df = loadDataFrame()\n",
     "# target = getDataByID(df, \"4a95ff94e9632672bb8f2829d4d4d8a3c71804c7a2c076753e3a7d9d0535df67\")\n",
-    "target = getDataByComment(df, experiment_idenitfication)\n",
+    "target = getDataByComment(df, name)\n",
     "# target = getDataByID(df, \"4a95ff94e9632672bb8f2829d4d4d8a3c71804c7a2c076753e3a7d9d0535df67\")\n"
    ]
   },
@@ -134,12 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_id_array = target['simulation_id'].values\n",
-    "failure_particle_array = []\n",
-    "for sim_id in failure_simulation_id:\n",
-    "    print(sim_id)\n",
-    "    if os.path.exists(f\"coupled_flux_qubit_protocol/coupled_flux_qubit_data_gallery/{sim_id}_failure_path.npy\"):\n",
-    "        failure_particle_array.append(np.load(f\"coupled_flux_qubit_protocol/coupled_flux_qubit_data_gallery/{sim_id}_failure_path.npy\"))"
+    "import NAND_PARAMETERS"
    ]
   },
   {
@@ -148,12 +152,29 @@
    "id": "9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sim_id_array = target['simulation_id'].values\n",
+    "failure_particle_array = []\n",
+    "for sim_id in failure_simulation_id:\n",
+    "    print(sim_id)\n",
+    "    if os.path.exists(f\"{NAND_PARAMETERS.GALLERY_DATA_FOLDER}/{sim_id}_failure_path.npy\"):\n",
+    "        failure_particle_array.append(np.load(f\"{NAND_PARAMETERS.GALLERY_DATA_FOLDER}/{sim_id}_failure_path.npy\"))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NAND_PARAMETERS.GALLERY_DATA_FOLDER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -237,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,14 +284,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "# Show animations"
@@ -279,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,14 +343,114 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "failure_particle_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "failure_particle_array_selected = failure_particle_array[0:3, ...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfqr.protocol_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfqr.protocol_time_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reducedTimeArray = cfqr.protocol_all_time_array[::cfqr.params['as_step'][-1]]\n",
+    "fig, ax = plt.subplots(2, 1, figsize=[3, 6])\n",
+    "pColor = cfqr.pColor\n",
+    "\n",
+    "\n",
+    "for trajectory in failure_particle_array_selected:\n",
+    "    _trajectory = trajectory.copy()\n",
+    "    _trajectory[..., (1, 2, 3), 1] = 0\n",
+    "    _trajectory_KE_array = cfqr.system.get_kinetic_energy(_trajectory)\n",
+    "    if trajectory[0, 0, 0] < 0 and trajectory[0, 1, 0] > 0:\n",
+    "        key = \"01\"\n",
+    "    if trajectory[0, 0, 0] > 0 and trajectory[0, 1, 0] > 0:\n",
+    "        key = \"11\"\n",
+    "    if trajectory[0, 0, 0] < 0 and trajectory[0, 1, 0] < 0:\n",
+    "        key = \"00\"\n",
+    "    if trajectory[0, 0, 0] > 0 and trajectory[0, 1, 0] < 0:\n",
+    "        key = \"10\"\n",
+    "    ax[0].plot(reducedTimeArray, trajectory[:, 0, 0], color=pColor[key])\n",
+    "    # ax[0].set_ylabel(r\"$\\varphi_1$\", fontsize=12)\n",
+    "    ax[1].plot(reducedTimeArray, _trajectory_KE_array, color=pColor[key])\n",
+    "    ax[1].set_xlabel(r\"time $(t_c)$\", fontsize=12)\n",
+    "\n",
+    "    # raising_barrier_init_t = 7\n",
+    "    # raising_barrier_final_t = 14\n",
+    "\n",
+    "    raising_barrier_init_t = 21\n",
+    "    raising_barrier_final_t = 27\n",
+    "    for i in range(0, 2):\n",
+    "        ax[i].axvline(raising_barrier_init_t, linestyle = \"--\", color = \"grey\", alpha = 0.3)\n",
+    "        ax[i].axvline(raising_barrier_final_t, linestyle = \"--\", color = \"grey\", alpha = 0.3)\n",
+    "\n",
+    "    \n",
+    "    # ax[1].set_ylabel(r\"$KE_1 (k_BT)$\", fontsize=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
     "time_index_start = 0\n",
     "time_index_end = -1\n",
     "frame_skip = 500\n",
-    "frame_skip = 50\n",
+    "# frame_skip = 50\n",
     "all_state = failure_particle_array[:, time_index_start:time_index_end, ...]\n",
     "reducedTimeArray = cfqr.protocol_all_time_array[slice(*params[\"as_step\"])]\n",
     "targetTimeArray = reducedTimeArray[time_index_start:time_index_end]\n",
@@ -346,6 +467,8 @@
     "    fig.tight_layout()\n",
     "    writer = animation.PillowWriter(fps=10, metadata=dict(artist='Me'), bitrate=1800)\n",
     "    ani.save('scatter.gif', writer=writer)\n",
+    "    # ani.save('scatter.mp4', writer=\"ffmpeg\")\n",
+    "\n",
     "    plt.close()\n",
     "    \n"
    ]
@@ -353,17 +476,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Image(filename=\"scatter.gif\")"
+    "# ani.save('scatter.mp4', writer=\"ffmpeg\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display.Image(filename=\"scatter.gif\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -382,14 +531,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "38",
    "metadata": {},
    "source": [
     "# Show animations in different spaces"
@@ -398,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -449,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -556,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -564,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -572,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -580,14 +753,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "50",
    "metadata": {
     "tags": []
    },
@@ -598,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,14 +862,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "54",
    "metadata": {
     "tags": []
    },
@@ -707,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -790,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -798,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -816,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -824,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": []
