clean up directory

--- a/1D_qfp_simulation.ipynb
+++ b/1D_qfp_simulation.ipynb
@@ -18,39 +18,10 @@
     "\n",
     "\n",
     "from quick_sim import setup_sim\n",
-    "\n",
-    "\n",
     "# import edward_tools.fq_runner as fq_runner\n",
     "from edward_tools.simple_1D_potential import flux_qubit_1D_non_linear_approx_pot, flux_qubit_1D_non_linear_approx_force\n",
-    "from edward_tools.visualization import animate_sim_flux_qubit, plotFidelityBarChart, separate_by_state_2\n",
-    "from edward_tools.initial_state_sampling import extra_constraint_00_and_11_only\n",
-    "from NAND_PARAMETERS import *\n",
-    "import importlib\n",
-    "\n",
     "import kyle_tools as kt\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "from edward_tools import coupled_fq_protocol_library, cfq_runner\n",
-    "from edward_tools import coupled_fq_protocol_library\n",
-    "\n",
-    "import edward_tools.cfq_batch_sweep as cfq_batch_sweep\n",
-    "import edward_tools.Analysis_tool.general_analysis_tools as general_analysis_tool\n",
-    "# from edward_tools.Analysis_tool.general_analysis_tools import show_phi_dc_with_time\n",
-    "import edward_tools.Analysis_tool.minimum_value_of_potential as minimum_value_of_potential\n",
-    "from edward_tools.couple_flux_qubit_metrics import fidelityEvaluation\n",
-    "from edward_tools import visualization\n",
-    "\n",
-    "coupled_fq_protocol_library = importlib.reload(coupled_fq_protocol_library)\n",
-    "create_system = coupled_fq_protocol_library.create_system\n",
-    "get_potential_shot_at_different_t = coupled_fq_protocol_library.get_potential_shot_at_different_t\n",
-    "get_potential_shot_at_different_t_1D = coupled_fq_protocol_library.get_potential_shot_at_different_t_1D\n",
-    "create_simple_protocol_parameter_dict = coupled_fq_protocol_library.create_simple_protocol_parameter_dict\n",
-    "coupled_fq_runner = importlib.reload(cfq_runner)\n",
-    "coupled_fq_protocol_library = importlib.reload(coupled_fq_protocol_library)\n",
-    "create_system = coupled_fq_protocol_library.create_system\n",
-    "get_potential_along_a_1D_cutline = coupled_fq_protocol_library.get_potential_along_a_1D_cutline\n",
-    "plotCutlines = coupled_fq_protocol_library.plotCutlines"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -60,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "has_velocity = True\n",
+    "has_velocity = True # True: underdamped dynamics, False: overdamped dyanmics\n",
     "\n",
     "PHI_0 = 2.067833848 * 1e-15\n",
     "k_B = 1.38e-23\n",
@@ -69,8 +40,6 @@
     "k_BT = k_B * T\n",
     "C_factor, R_factor, L_factor = 1, 1, 1\n",
     "\n",
-    "\n",
-    "time_scale = 1.0\n",
     "R_1 = 100   * R_factor # ohm\n",
     "C_1 = 1e-12 * C_factor # F\n",
     "L_1 = 5e-12 * L_factor # Inductor L1, L_2 H \n",
@@ -227,11 +196,7 @@
     "params['sim_params'] = [_lambda, _theta, _eta]\n",
     "\n",
     "# save the states at all time steps\n",
-    "saveAllStates = True\n",
-    "\n",
-    "# bookmark\n",
-    "initial_parameter_dict[\"phi_1xdc\"] = 0\n",
-    "initial_parameter_dict[\"phi_1x\"]   = 0"
+    "saveAllStates = True"
    ]
   },
   {
@@ -354,11 +319,10 @@
     "    comp_protocol_parameter_time_series = [protocol_parameter_dict[key] for key in protocol_key]\n",
     "    comp_protocol_parameter_time_series = np.array(comp_protocol_parameter_time_series).T\n",
     "\n",
-    "    \n",
     "    if modifiedFunction == None:\n",
     "        modifiedFunction = [None for _ in range(len(comp_t)-1)]\n",
     "    \n",
-    "    \n",
+    "    # Loop through each time interval to create individual Protocol segments\n",
     "    for i in range(len(comp_t)-1):\n",
     "        n_th_comp_time_array = (comp_t[i], comp_t[i+1])\n",
     "        n_th_comp_protocol_parameter_array = np.array([comp_protocol_parameter_time_series[i], comp_protocol_parameter_time_series[i+1]]).T # in the form of array of [(p_n_i, p_n_f)]\n",
@@ -392,7 +356,7 @@
     "\n",
     "\n",
     "\n",
-    "fq_runner = fluxQubitRunner(potential=coupled_fq_pot, params=params, potential_default_param_dict=initial_parameter_dict, storage_protocol=storage_protocol, computation_protocol=comp_protocol)\n"
+    "\n"
    ]
   },
   {
@@ -402,7 +366,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "computation_protocol_parameter_dict"
+    "fq_runner = fluxQubitRunner(potential=coupled_fq_pot, params=params, potential_default_param_dict=initial_parameter_dict, storage_protocol=storage_protocol, computation_protocol=comp_protocol)\n",
+    "fq_runner.initialize_sim()\n",
+    "# fq_runner.set_sim_attributes()"
    ]
   },
   {
@@ -412,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "comp_protocol.protocol_array[0].get_params(10)"
+    "simResult = fq_runner.run_sim()"
    ]
   },
   {
@@ -422,8 +388,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fq_runner.initialize_sim()\n",
-    "# fq_runner.set_sim_attributes()"
+    "phi_1_array = np.linspace(-4, 4, 100)\n",
+    "all_states = fq_runner.sim.output.all_state[\"states\"]\n",
+    "\n",
+    "plt.hist(all_states[:, 0, 0, 0], bins = 100)\n",
+    "bins = np.linspace(-4, 4, 200)\n",
+    "phi_1_array = np.linspace(-4, 4, 100)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "pdf_ax = ax.twinx()\n",
+    "p_0_index = all_states[:, 0, 0, 0] < 0\n",
+    "p_1_index = all_states[:, 0, 0, 0] > 0\n",
+    "p_0_color, p_1_color = \"red\", \"blue\"\n",
+    "\n",
+    "\n",
+    "# plot the potential and distribution historgram at t = 0\n",
+    "params_at_0 = fq_runner.protocol.get_params(0)\n",
+    "potential_at_t_0 = flux_qubit_1D_non_linear_approx_pot(phi_1_array, params_at_0)\n",
+    "\n",
+    "\n",
+    "ax.plot(phi_1_array, potential_at_t_0 -  min(potential_at_t_0), color='red')\n",
+    "plt.hist(fq_runner.sim.output.all_state[\"states\"][p_0_index, 0, 0, 0], bins = bins, color = p_0_color)\n",
+    "plt.hist(fq_runner.sim.output.all_state[\"states\"][p_1_index, 0, 0, 0], bins = bins, color = p_1_color)\n",
+    "pdf_ax.get_yaxis().set_visible(False)\n",
+    "pdf_ax.set_xlim(-4, 4)\n",
+    "\n",
+    "\n",
+    "# plot the potential and distribution historgram at time step t\n",
+    "def update(i):\n",
+    "    ax.clear()\n",
+    "    pdf_ax.clear()\n",
+    "    ax.set_ylabel('Potential (k_BT)')\n",
+    "\n",
+    "    params_at_t_i = fq_runner.protocol.get_params(i * params[\"dt\"])\n",
+    "    potential_at_t_i = flux_qubit_1D_non_linear_approx_pot(phi_1_array, params_at_t_i)\n",
+    "    potential_at_t_i = potential_at_t_i - min(potential_at_t_0)\n",
+    "    ax.plot(phi_1_array, potential_at_t_i, color='red')\n",
+    "\n",
+    "    pdf_ax.hist(all_states[p_0_index, i, 0, 0], bins = bins, color = p_0_color)\n",
+    "    pdf_ax.hist(all_states[p_1_index, i, 0, 0], bins = bins, color = p_1_color)\n",
+    "    pdf_ax.set_xlim(-4, 4)\n",
+    "    ax.set_title(f\"Kyle's simulator (t = {params['dt'] * i:.3g})\")\n",
+    "\n",
+    "\n",
+    "animation_frames = range(0, all_states.shape[1], 5)\n",
+    "ani = animation.FuncAnimation(fig, update, frames=animation_frames, interval = 50)\n",
+    "\n",
+    "plt.close()\n",
+    "# HTML(ani.to_jshtml())\n",
+    "HTML(ani.to_html5_video())"
    ]
   },
   {
@@ -433,7 +446,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fq_runner.system.protocol.t_f"
+    "# plot the work cost\n",
+    "W_3_std = fq_runner.sim.work_statistic_array[-1][1]/np.sqrt(params[\"N\"]) * 3\n",
+    "plt.hist(fq_runner.sim.work_dist_array, bins = 2)\n",
+    "plt.title(f\"mean work = {np.mean(fq_runner.sim.work_dist_array):.3g} ± {W_3_std:.3g} k_BT\") \n",
+    "plt.xlabel(\"W (k_BT)\")\n",
+    "plt.ylabel(\"count\")"
    ]
   },
   {
@@ -450,9 +468,7 @@
    "id": "20",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "simResult = fq_runner.run_sim()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -460,120 +476,12 @@
    "id": "21",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "fq_runner.protocol.get_params(0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phi_1_array = np.linspace(-4, 4, 100)\n",
-    "params_at_0 = fq_runner.protocol.get_params(0)\n",
-    "flux_qubit_1D_non_linear_approx_pot(phi_1_array, params_at_0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_states = fq_runner.sim.output.all_state[\"states\"]\n",
-    "\n",
-    "plt.hist(all_states[:, 0, 0, 0], bins = 100)\n",
-    "bins = np.linspace(-4, 4, 200)\n",
-    "phi_1_array = np.linspace(-4, 4, 100)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "pdf_ax = ax.twinx()\n",
-    "p_0_index = all_states[:, 0, 0, 0] < 0\n",
-    "p_1_index = all_states[:, 0, 0, 0] > 0\n",
-    "p_0_color, p_1_color = \"red\", \"blue\"\n",
-    "\n",
-    "# x_array = torch.linspace(-4, 4, 50, device=device).reshape(-1, 1)\n",
-    "# potential_at_t_0 = potential.get_potential_value(x_array, protocol_tensor_load, 0)\n",
-    "params_at_0 = fq_runner.protocol.get_params(0)\n",
-    "potential_at_t_0 = flux_qubit_1D_non_linear_approx_pot(phi_1_array, params_at_0)\n",
-    "\n",
-    "\n",
-    "ax.plot(phi_1_array, potential_at_t_0 -  min(potential_at_t_0), color='red')\n",
-    "plt.hist(fq_runner.sim.output.all_state[\"states\"][p_0_index, 0, 0, 0], bins = bins, color = p_0_color)\n",
-    "plt.hist(fq_runner.sim.output.all_state[\"states\"][p_1_index, 0, 0, 0], bins = bins, color = p_1_color)\n",
-    "pdf_ax.get_yaxis().set_visible(False)\n",
-    "pdf_ax.set_xlim(-4, 4)\n",
-    "\n",
-    "def update(i):\n",
-    "    # for each frame, update the data stored on each artist.\n",
-    "    ax.clear()\n",
-    "    pdf_ax.clear()\n",
-    "    ax.set_ylabel('Potential (k_BT)')\n",
-    "\n",
-    "    params_at_t_i = fq_runner.protocol.get_params(i * params[\"dt\"])\n",
-    "    potential_at_t_i = flux_qubit_1D_non_linear_approx_pot(phi_1_array, params_at_t_i)\n",
-    "    potential_at_t_i = potential_at_t_i - min(potential_at_t_0)\n",
-    "    # potential_at_t_i = potential_at_t_i\n",
-    "    ax.plot(phi_1_array, potential_at_t_i, color='red')\n",
-    "    pdf_ax.hist(all_states[p_0_index, i, 0, 0], bins = bins, color = p_0_color)\n",
-    "    pdf_ax.hist(all_states[p_1_index, i, 0, 0], bins = bins, color = p_1_color)\n",
-    "    pdf_ax.set_xlim(-4, 4)\n",
-    "    ax.set_title(f\"Kyle's simulator (t = {params['dt'] * i:.3g})\")\n",
-    "\n",
-    "# animation_frames = microstate_paths_load.shape[2]-1\n",
-    "animation_frames = range(0, all_states.shape[1], 5)\n",
-    "ani = animation.FuncAnimation(fig, update, frames=animation_frames, interval = 50)\n",
-    "# ani = animation.FuncAnimation(fig=fig, func=update, frames=time_steps, interval=30)\n",
-    "plt.close()\n",
-    "# # HTML(ani.to_jshtml())\n",
-    "HTML(ani.to_html5_video())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "W_3_std = fq_runner.sim.work_statistic_array[-1][1]/np.sqrt(params[\"N\"]) * 3\n",
-    "plt.hist(fq_runner.sim.work_dist_array, bins = 2)\n",
-    "plt.title(f\"mean work = {np.mean(fq_runner.sim.work_dist_array):.3g} ± {W_3_std:.3g} k_BT\") \n",
-    "plt.xlabel(\"W (k_BT)\")\n",
-    "plt.ylabel(\"count\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": []
