--- a/import_data_from_protocolopt.ipynb
+++ b/import_data_from_protocolopt.ipynb
@@ -9,9 +9,7 @@
    "source": [
     "import numpy as np\n",
     "import importlib, os, datetime\n",
-    "from sus.protocol_designer import Potential, System\n",
-    "from sus.protocol_designer.protocol import Injected_Protocol\n",
-    "# from sus.protocol_designer import Potential\n",
+    "from sus.protocol_designer import Protocol, Potential, Compound_Protocol\n",
     "from sus.protocol_designer.protocol import sequential_protocol\n",
     "from IPython import display\n",
     "from IPython.display import HTML, Image\n",
@@ -21,16 +19,17 @@
     "\n",
     "from quick_sim import setup_sim\n",
     "\n",
+    "\n",
     "# import edward_tools.fq_runner as fq_runner\n",
     "from edward_tools.simple_1D_potential import flux_qubit_1D_non_linear_approx_pot, flux_qubit_1D_non_linear_approx_force\n",
     "from edward_tools.visualization import animate_sim_flux_qubit, plotFidelityBarChart, separate_by_state_2\n",
     "from edward_tools.initial_state_sampling import extra_constraint_00_and_11_only\n",
     "from NAND_PARAMETERS import *\n",
-    "import importlib, pathlib\n",
+    "import importlib\n",
     "\n",
     "import kyle_tools as kt\n",
     "import matplotlib.pyplot as plt\n",
-    "from sqlite_database import DatabaseManager\n",
+    "\n",
     "\n",
     "from edward_tools import coupled_fq_protocol_library, cfq_runner\n",
     "from edward_tools import coupled_fq_protocol_library\n",
@@ -41,6 +40,7 @@
     "import edward_tools.Analysis_tool.minimum_value_of_potential as minimum_value_of_potential\n",
     "from edward_tools.couple_flux_qubit_metrics import fidelityEvaluation\n",
     "from edward_tools import visualization\n",
+    "\n",
     "\n",
     "coupled_fq_protocol_library = importlib.reload(coupled_fq_protocol_library)\n",
     "create_system = coupled_fq_protocol_library.create_system\n",
@@ -112,35 +112,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "has_velocity = True\n",
+    "has_velocity = True # True: underdamped dynamics, False: overdamped dyanmics\n",
     "\n",
     "PHI_0 = 2.067833848 * 1e-15\n",
     "k_B = 1.38e-23\n",
     "T = 4.2\n",
     "# T = 7\n",
     "k_BT = k_B * T\n",
+    "C_factor, R_factor, L_factor = 1, 1, 1\n",
     "\n",
-    "C_factor = 1\n",
-    "L_factor = 1\n",
-    "R_factor = experiemnt_data[\"R\"]\n",
-    "# I_m_factor = 50\n",
-    "# I_m_factor = 15\n",
-    "I_m_factor = 0\n",
-    "time_scale = 1.0\n",
-    "\n",
-    "\n",
-    "I_p_1, I_p_2 = 5e-6 , 5e-6  # Amp\n",
-    "I_m_1, I_m_2 = 7e-9 * I_m_factor, 7e-9 * I_m_factor                           # Amp\n",
-    "R_1, R_2 = 100 * R_factor, 100 * R_factor                                         # ohm\n",
-    "\n",
-    "# L_1, L_2 = 140e-12 * L_factor, 140e-12 * L_factor                             # H \n",
-    "L_1, L_2 = 5e-12 * L_factor, 5e-12 * L_factor                             # H \n",
-    "C_1, C_2 = 1e-12 * C_factor, 1e-12 * C_factor                             # F\n",
-    "\n",
-    "\n",
-    "\n",
+    "R_factor = experiemnt_data[\"R\"] # Ohm\n",
+    "C_1 = 1e-12 * C_factor # F\n",
+    "L_1 = 5e-12 * L_factor # Inductor L1, L_2 H \n",
+    "I_m_1 = 0\n",
     "freq = 1/np.sqrt(C_1 * L_1)\n",
-    "\n",
     "characteristic_time = np.sqrt(C_1 * C_factor * L_1 * L_factor)\n",
     "print(f\"freq = {freq / 1e9:.3f}GHz, characteristic_time  = {characteristic_time * 1e12:.3f}ps\")\n"
    ]
@@ -154,51 +139,27 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "m_c = C_1\n",
     "m_1 = C_1\n",
-    "m_2 = C_2\n",
-    "x_c = PHI_0 / (2 * np.pi)\n",
-    "time_scale_factor = 1\n",
-    "t_c = np.sqrt(L_1 * C_1)\n",
-    "v_c = x_c / t_c\n",
+    "x_c = PHI_0 / (2 * np.pi) # position constant\n",
+    "t_c = np.sqrt(L_1 * C_1) # time constant\n",
+    "v_c = x_c / t_c # speed constant\n",
     "\n",
-    "\n",
-    "U0_1 = m_c * x_c**2 / t_c**2 / k_BT\n",
-    "U0_2 = m_2 * x_c**2 / t_c**2 / k_BT\n",
+    "U0_1 = m_c * x_c**2 / t_c**2 / k_BT   # energy scale\n",
     "kappa_1, kappa_2, kappa_3, kappa_4 = 1/U0_1, 1/U0_1, 1/U0_1, 1/U0_1\n",
     "\n",
     "lambda_1 = 2 * np.sqrt(L_1 * C_1) / (C_1 * R_1)\n",
     "theta_1  = 1\n",
     "eta_1    = np.sqrt(np.sqrt(L_1 * C_1)/ (R_1 * C_1)) * np.sqrt(2 * kappa_1 / 1**2)\n",
     "\n",
-    "lambda_2 = 2 * np.sqrt(L_1 * C_1) / (C_2 * R_2)\n",
-    "theta_2  = 1 / (C_2/C_1)\n",
-    "eta_2    = np.sqrt(np.sqrt(L_1 * C_1)/ (R_1 * C_1)) * np.sqrt(2 * kappa_2 * (R_1 * C_1**2) / (R_2 * C_2**2))\n",
-    "\n",
-    "lambda_3 = 2 * np.sqrt(L_1 * C_1) / (C_1 * R_1)\n",
-    "theta_3  = 4\n",
-    "eta_3    = np.sqrt(np.sqrt(L_1 * C_1)/ (R_1 * C_1)) * np.sqrt(8 * kappa_3)\n",
-    "\n",
-    "lambda_4 = 2 * np.sqrt(L_1 * C_1) / (C_2 * R_2)\n",
-    "theta_4  = 4 / (C_2/C_1)\n",
-    "eta_4    = np.sqrt(np.sqrt(L_1 * C_1)/ (R_1 * C_1)) * np.sqrt(8 * kappa_4 * (R_1 * C_1**2) / (R_2 * C_2**2))\n",
-    "\n",
     "gamma = 16\n",
-    "\n",
-    "\n",
-    "beta_1 = 2 * np.pi * L_1 * I_p_1 / PHI_0; \n",
-    "beta_2 = 2 * np.pi * L_2 * I_p_2 / PHI_0;\n",
-    "\n",
     "beta_1 = 2.3\n",
-    "beta_2 = 2.3\n",
-    "\n",
     "d_beta_1 = 2 * np.pi * L_1 * I_m_1 / PHI_0; \n",
-    "d_beta_2 = 2 * np.pi * L_2 * I_m_2 / PHI_0;\n",
     "\n",
-    "_lambda = np.array([lambda_2])\n",
-    "_theta  = np.array([theta_2])\n",
-    "_eta  =   np.array([eta_2])"
+    "\n",
+    "_lambda = np.array([lambda_1])\n",
+    "_theta  = np.array([theta_1])\n",
+    "_eta  =   np.array([eta_1])"
    ]
   },
   {
@@ -293,8 +254,8 @@
     "\"\"\"\n",
     "# step 1: Define potential\n",
     "\"\"\"\n",
-    "coupled_fq_default_param = [U0_1, gamma, beta_1, d_beta_1, 0, 0, x_c]\n",
-    "[phi_1_bound, phi_1dc_bound] = np.array([4, 4])/time_scale_factor\n",
+    "coupled_fq_default_param = [U0_1, gamma, beta_1, d_beta_1, 0, 0, x_c, 0]\n",
+    "[phi_1_bound, phi_1dc_bound] = np.array([4, 4])\n",
     "contour_range = [300, 2000]\n",
     "\n",
     "coupled_fq_domain = [[-phi_1_bound], [phi_1_bound]]\n",
@@ -319,18 +280,16 @@
    },
    "outputs": [],
    "source": [
+    "# to turn on/off dissipation and noise\n",
     "zeroDissipation = False\n",
-    "zeroDissipation = True\n",
-    "saveAllStates = True\n",
-    "\n",
-    "params['sim_params'] = [_lambda, _theta, _eta]\n",
-    "\n",
+    "# zeroDissipation = True\n",
     "if zeroDissipation:\n",
     "    params['sim_params'] = [_lambda * 0, _theta, _eta * 0]\n",
     "\n",
-    "# bookmark\n",
-    "initial_parameter_dict[\"phi_1xdc\"] = 0\n",
-    "initial_parameter_dict[\"phi_1x\"]   = 0"
+    "params['sim_params'] = [_lambda, _theta, _eta]\n",
+    "\n",
+    "# save the states at all time steps\n",
+    "saveAllStates = True\n"
    ]
   },
   {
@@ -347,14 +306,6 @@
    "id": "16",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import torch\n",
     "\n",
@@ -367,10 +318,6 @@
     "potential_val_load = torch.load(f\"{data_location_expanded_path}/{uid}_potential_val.pt\").detach().cpu().numpy()\n",
     "protocol_tensor_load = torch.load(f\"{data_location_expanded_path}/{uid}_protocol_tensor.pt\").detach().cpu().numpy()\n",
     "\n",
-    "# protocol_tensor_load[0, :] = 0\n",
-    "# protocol_tensor_load[1, 1:-1] = np.pi\n",
-    "# protocol_tensor_load[1, :] = 0\n",
-    "\n",
     "t_duration =  experiemnt_data[\"t_LC_duration\"]\n",
     "\n",
     "# params['dt'] = 1/100\n",
@@ -381,14 +328,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "source": [
     "# create cfqr object"
@@ -397,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -430,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,12 +468,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
     "fq_runner.sim.work_dist_array.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -542,14 +497,6 @@
    "id": "28",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "time_array = np.arange(0, int(t_duration /params['dt'])) * params['dt']"
    ]
@@ -557,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,12 +539,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.mean(KE_array)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -629,14 +584,6 @@
    "id": "36",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "tilde_path = \"~/protocolopt/sim_data/simulations.db\"\n",
     "expanded_path = pathlib.Path(tilde_path).expanduser()\n",
@@ -651,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "39",
    "metadata": {},
    "source": [
     "### parameter setting"
@@ -749,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49",
+   "id": "48",
    "metadata": {},
    "source": [
     "# create cfqr object"
@@ -932,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -940,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1159,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": []
