--- a/1D_qfp_simulation.ipynb
+++ b/1D_qfp_simulation.ipynb
@@ -161,13 +161,7 @@
     "\n",
     "coupled_fq_domain = [[-phi_1_bound], [phi_1_bound]]\n",
     "\n",
-    "# coupled_fq_pot = Potential(coupled_flux_qubit_pot_with_offset_at_00_xy, coupled_flux_qubit_force, 14, 4,\\\n",
-    "#                            default_params = coupled_fq_default_param,  relevant_domain = coupled_fq_domain)\n",
-    "\n",
-    "coupled_fq_pot = Potential(flux_qubit_1D_non_linear_approx_pot, flux_qubit_1D_non_linear_approx_force, 8, 1, default_params = initial_parameter_dict,  relevant_domain = coupled_fq_domain)\n",
-    "\n",
-    "# coupled_fq_pot = Potential(coupled_flux_qubit_non_linear_approx_pot_special, coupled_flux_qubit_non_linear_approx_force_special, 14, 4,\\\n",
-    "                           # default_params = initial_parameter_dict,  relevant_domain = coupled_fq_domain)"
+    "coupled_fq_pot = Potential(flux_qubit_1D_non_linear_approx_pot, flux_qubit_1D_non_linear_approx_force, 8, 1, default_params = initial_parameter_dict,  relevant_domain = coupled_fq_domain)"
    ]
   },
   {
@@ -205,14 +199,6 @@
    "id": "9",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def create_one_bit_Protocol(_t, _protocol):\n",
     "    _protocol[\"duration\"] = _t\n",
@@ -228,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "10",
    "metadata": {
     "tags": []
    },
@@ -238,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "source": [
     "# create cfqr object"
@@ -247,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -362,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,6 +439,14 @@
     "plt.xlabel(\"W (k_BT)\")\n",
     "plt.ylabel(\"count\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -474,14 +468,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": []
